--- a/WHExplorer/My Project/Resources.resx
+++ b/WHExplorer/My Project/Resources.resx
@@ -211,4 +211,7 @@
   <data name="X" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\X.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="changePwdIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\changePwdIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
