--- a/WHExplorer/frmMain.resx
+++ b/WHExplorer/frmMain.resx
@@ -129,8 +129,8 @@
         RF/WBZnFQBrgSi4oKgHSf4DYKCW1OJmBgdEAyM4uLykAijPOAbJFkrLB7A0gdlFIkDOQfQTI5kuHsK+A
         2EkQ9hMQuwjoCSD7C0h9OpjNxAE2B8KWAbFLUitA9jI45xdUFmWmZ5QoGFpaWio4puQnpSoEVxaXpOYW
         K3jmJecXFeQXJZakpgDVQtwHBoIQhaAQ0wBqtNBkoDIAxQOE9TkQHL6MYmcQYgiQXFpUBmUyMhkT5iPM
-        mCPBwOC/lIGB5Q9CzKSXgWGBDgMD/1SEmJohA4OAPgPDvjkAwMZP/eeaqagAAAAJcEhZcwAACxEAAAsR
-        AX9kX5EAAP5PSURBVHhe7L0FdBtZtu+t7mkepobp7mkMMzNz4thxbCcx2zFD7JiZ2TEzM1uyZItly8zM
+        mCPBwOC/lIGB5Q9CzKSXgWGBDgMD/1SEmJohA4OAPgPDvjkAwMZP/eeaqagAAAAJcEhZcwAACw4AAAsO
+        AUC+4UEAAP5PSURBVHhe7L0FdBtZtu+t7mkepobp7mkMMzNz4thxbCcx2zFD7JiZ2TEzM1uyZItly8zM
         zMzMoP2dUjpzO/353ftm7r0z03lVa/2WdMpSWao6qv3f++yzDwEAcHBwcHBwcP4fY9udODg4ODg4OG82
         2+7EwcHBwcHBebPZdicODg4ODg7Om822O3FwcHBwcHDebLbdiYODg4ODg/Nms+1OHBwcHBwcnDebbXfi
         4ODg4ODgvNlsuxMHBwcHBwfnzWbbnTg4ODg4ODhvNtvuxMHBwcHBwXmz2XYnDg4ODg4OzpvNtjtxcHBw
@@ -4921,7 +4921,7 @@
         XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
         fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
         tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALDgAACw4BQL7hQQAAk3JJREFUeF7tnXVcVFkb
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALDAAACwwBP0AiyAAAk3JJREFUeF7tnXVcVFkb
         x8XWdVddW9ddXXXVXdfYtbsDMDARwRaVFhBQUAG7u7u7u7u7u13bNQgxn/d5zo05984ZGNTXHXD++H6U
         wzAMM/f3Pc+Je28SALBi5YvRxzZbMiQPUhypjNj3scvmhHQJtcsWgIQjYUgQ4hNql901zC57qzD77LZI
         cSQrYiN6bitfHmGjFStx0ate1hRIod71sjZGeiMLe9tmPd3bNlsMhh6MsDOAwdeRHVACEvaMt8htZEe4
@@ -11324,6 +11324,9 @@
   </metadata>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>226, 17</value>
+  </metadata>
+  <metadata name="csvFileExportBrwDial.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>368, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>50</value>
